--- a/MockIntegration/build.gradle
+++ b/MockIntegration/build.gradle
@@ -12,7 +12,7 @@ description = "Dane County Wisconsin Data Integrations"
 group = "com.openlattice"
 version = 'v0.0.1'
 
-mainClassName = "com.openlattice.integrations.mockIntegration.demoData"
+mainClassName = "com.openlattice.integrations.mockIntegration.DemoHealth"
 applicationDefaultJvmArgs = ["-Xmx8G", "-Xms8G", "-server"]
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
