--- a/MockIntegration/src/main/resources/edm.yaml
+++ b/MockIntegration/src/main/resources/edm.yaml
@@ -10,20 +10,23 @@ propertyTypes:
   piiField: true
   analyzer: "STANDARD"
   properties:
-  - type: "person.AgeAtEvent"
+  - type: "person.age"
     title: "Age"
-    description: "The age of a person at some event"
+    description: "The age of a person"
+  - type: "event.AgeFirstUsed"
+    title: "Age First Used"
+    description: "Age First Used"
 - datatype: "Date"
   piiField: false
   analyzer: "STANDARD"
   properties:
-  - type: "date.BirthDate"
+  - type: "nc.PersonBirthDate"
     title: "Person Birth Date"
     description: "A date a person was born."
   - type: "date.LastDateConditionPresented"
     title: "Last Date Condition Presented"
     description: "Last Date Condition Presented"
-  - type: "date.DateConditionDiagnosed"
+  - type: "date.ConditionDiagnosed"
     title: "Date Condition Diagnosed"
     description: "Date Condition Diagnosed"
   - type: "date.AdmissionDate"
@@ -47,18 +50,8 @@ propertyTypes:
   - type: "date.MissedAppointment"
     title: "Missed Appointment"
     description: "Missed Appointment"
-  - type: "nc.PersonBirthDate"
-    title: "PersonBirthDate"
-    description: "PersonBirthDate"
 - datatype: "String"
   piiField: false
-  analyzer: "METAPHONE"
-  properties:
-  - type: "place.NameOfPlace"
-    title: "Name Of Place"
-    description: "The name of the place"
-- datatype: "String"
-  piiField: true
   analyzer: "METAPHONE"
   properties:
   - type: "nc.PersonGivenName"
@@ -66,23 +59,10 @@ propertyTypes:
     description: "A first name of a person."
   - type: "nc.PersonMiddleName"
     title: "Middle Name"
-    description: "A middle name of a person."
+    description: "A first name of a person."
   - type: "nc.PersonSurName"
     title: "Surname"
     description: "A last name or family name of a person."
-  - type: "nc.PersonBirthPlace"
-    title: "Birth Place"
-    description: "The birth place of a person."
-  - type: "im.PersonNickName"
-    title: "Alias Name"
-    description: "A alias name or street name of a person."
-- datatype: "String"
-  piiField: true
-  analyzer: "STANDARD"
-  properties:
-    - type: "nc.SSN"
-      title: "Social Security Number"
-      description: "The social security number of a subject."
 - datatype: "String"
   piiField: false
   analyzer: "STANDARD"
@@ -99,51 +79,24 @@ propertyTypes:
   - type: "nc.SubjectIdentification"
     title: "Subject Identification"
     description: "An assigned identification that identifies a subject."
-  - type: "general.StringID"
-    title: "StringID"
-    description: "StringID"
-  - type: "nc.PersonEyeColorText"
-    title: "Person Eye Color"
-    description: "Eye color of a person"
-  - type: "person.Allergy"
-    title: "Allergy"
-    description: "Allergy"
-  - type: "person.HomeLess"
-    title: "HomeLess"
-    description: "HomeLess"
+  - type: "nc.ProviderIdentification"
+    title: "Provider Identification"
+    description: "Provider Identification"
+  - type: "general.stringid"
+    title: "Id"
+    description: "A string that uniquely identifies"
   - type: "person.NationalProviderNumber"
     title: "National Provider Number"
     description: "Identification used to refer to a medical provider"
-  - type: "place.ServiceType"
-    title: "Service Type"
-    description: "Service Type"
-  - type: "place.Location"
-    title: "Location"
-    description: "location"
-  - type: "place.StreetAddress"
-    title: "Street Address"
-    description: "A street address"
-  - type: "place.City"
-    title: "City"
-    description: "A city"
-  - type: "place.State"
-    title: "State"
-    description: "A state"
-  - type: "place.ZipCode"
-    title: "Zip Code"
-    description: "A zip code"
   - type: "event.MissedAppointmentCount"
     title: "Missed Appointment Count"
     description: "Missed Appointment Count"
   - type: "event.AppointmentType"
     title: "Appointment Type"
     description: "Appointment Type"
-  - type: "event.Condition"
-    title: "Medical Condition"
-    description: "Medical Condition"
-  - type: "general.PatientIdentification"
-    title: "Patient Identification"
-    description: "Patient Identification"
+  - type: "event.DiagnosedCondition"
+    title: "Diagnosed Condition"
+    description: "Diagnosed Condition"
   - type: "event.ConditionComments"
     title: "Condition Comments"
     description: "Condition Comments"
@@ -162,8 +115,8 @@ propertyTypes:
   - type: "place.InsuranceGroupNumber"
     title: "Insurance Group Number"
     description: "Insurance Group Number"
-  - type: "person.InsuranceMemberIdentification"
-    title: "Insurance Member Identification"
+  - type: "person.InsuredMemberIdentification"
+    title: "Insured Member Identification"
     description: "Insurance Member Identification"
   - type: "event.CurrentMedicationName"
     title: "Current Medication Name"
@@ -180,15 +133,12 @@ propertyTypes:
   - type: "event.RouteOfAdministration"
     title: "Route Of Administration"
     description: "Route Of Administration"
-  - type: "event.Frequency"
-    title: "Frequency"
-    description: "Frequency"
-  - type: "event.Duration"
-    title: "Duration"
-    description: "Duration"
-  - type: "event.AgeFirstUsed"
-    title: "Age First Used"
-    description: "Age First Used"
+  - type: "event.SubstanceFrequency"
+    title: "Substance Frequency"
+    description: "Substance Frequency"
+  - type: "event.SubstanceDuration"
+    title: "Substance Duration"
+    description: "Substance Duration"
   - type: "event.SubstanceComments"
     title: "Substance Comments"
     description: "Substance Comments"
@@ -249,6 +199,9 @@ propertyTypes:
   - type: "event.ReasonForNonAdmission"
     title: "Reason For Non Admission"
     description: "Reason For Non Admission"
+  - type: "general.SubstanceSequenceID"
+    title: "SubstanceSequenceID"
+    description: "SubstanceSequenceID"
   - type: "general.AssessmentSequenceID"
     title: "AssessmentSequenceID"
     description: "AssessmentSequenceID"
@@ -285,23 +238,7 @@ propertyTypes:
   - type: "event.RecommendedNextVisit"
     title: "Recommended Provider Name"
     description: "Recommended Provider Name"
-
 entityTypes:
-- type: "general.Place"
-  title: "Place"
-  description: "A place"
-  key:
-  - "general.StringID"
-  properties:
-  - "general.StringID"
-  - "place.NameOfPlace"
-  - "place.Location"
-  - "place.StreetAddress"
-  - "place.City"
-  - "place.State"
-  - "place.ZipCode"
-  - "place.ServiceType"
-  baseType: null
 - type: "general.person"
   title: "Person"
   description: "A person"
@@ -310,13 +247,24 @@ entityTypes:
   properties:
   - "nc.SubjectIdentification"
   - "nc.PersonGivenName"
+  - "nc.PersonMiddleName"
   - "nc.PersonSurName"
   - "nc.PersonSex"
   - "nc.PersonRace"
   - "nc.PersonEthnicity"
   - "nc.PersonBirthDate"
+  - "person.age"
   - "publicsafety.mugshot"
-  - "nc.PersonEyeColorText"
+  baseType: null
+- type: "general.Provider"
+  title: "Provider"
+  description: "A provider"
+  key:
+  - "nc.ProviderIdentification"
+  properties:
+  - "nc.ProviderIdentification"
+  - "nc.PersonGivenName"
+  - "nc.PersonSurName"
   baseType: null
 - type: "general.Appointment"
   title: "Appointment"
@@ -334,27 +282,42 @@ entityTypes:
   title: "Medical Condition"
   description: "Medical Condition"
   key:
-  - "general.StringID"
+  - "general.stringid"
   properties:
-  - "general.StringID"
-  - "event.Condition"
+  - "general.stringid"
+  - "event.DiagnosedCondition"
   - "event.ConditionComments"
   - "event.ConditionPreventsDetox"
   - "date.LastDateConditionPresented"
-  - "date.DateConditionDiagnosed"
+  - "date.ConditionDiagnosed"
   baseType: null
 - type: "general.Insurance"
   title: "Insurance Records"
   description: "Insurance Records"
   key:
-  - "general.StringID"
+  - "general.stringid"
   properties:
-  - "general.StringID"
+  - "general.stringid"
   - "place.InsuranceName"
-  - "place.Location"
   - "place.InsurancePhoneNumber"
   - "place.InsuranceGroupNumber"
-  - "person.InsuranceMemberIdentification"
+  - "person.InsuredMemberIdentification"
+  baseType: null
+- type: "general.Substance"
+  title: "Substance Used"
+  description: "Substance used"
+  key:
+  - "general.SubstanceSequenceID"
+  properties:
+  - "general.SubstanceSequenceID"
+  - "event.SubstanceType"
+  - "event.SubstanceDosage"
+  - "event.RouteOfAdministration"
+  - "event.SubstanceFrequency"
+  - "event.SubstanceDuration"
+  - "event.AgeFirstUsed"
+  - "date.LastUsed"
+  - "event.SubstanceComments"
   baseType: null
 - type: "general.AdmissionRecord"
   title: "Admission Record"
@@ -367,8 +330,8 @@ entityTypes:
   - "event.SubstanceType"
   - "event.SubstanceDosage"
   - "event.RouteOfAdministration"
-  - "event.Frequency"
-  - "event.Duration"
+  - "event.SubstanceFrequency"
+  - "event.SubstanceDuration"
   - "event.AgeFirstUsed"
   - "date.LastUsed"
   - "event.SubstanceComments"
@@ -394,9 +357,6 @@ entityTypes:
   - "event.AdmissionRecordComments"
   - "event.ApprovedForAdmission"
   - "event.ReasonForNonAdmission"
-  - "person.AgeAtEvent"
-  - "person.ProviderName"
-  - "person.NationalProviderNumber"
   baseType: null
 - type: "general.MedicalAssessment"
   title: "Medical Assessment"
@@ -453,6 +413,36 @@ associationTypes:
   dst:
   - "general.MedicalAssessment"
   bidirectional: false
+- type:
+    type: "general.Used"
+    title: "Used"
+    description: "Used"
+    key:
+    - "nc.SubjectIdentification"
+    - "general.SubstanceSequenceID"
+    properties:
+    - "nc.SubjectIdentification"
+    - "general.SubstanceSequenceID"
+  src:
+  - "general.person"
+  dst:
+  - "general.Substance"
+  bidirectional: false
+- type:
+    type: "general.AssessedBy"
+    title: "Assessed By"
+    description: "Assessed By"
+    key:
+    - "nc.ProviderIdentification"
+    - "general.AssessmentSequenceID"
+    properties:
+    - "nc.ProviderIdentification"
+    - "general.AssessmentSequenceID"
+  src:
+  - "general.Provider"
+  dst:
+  - "general.MedicalAssessment"
+  bidirectional: false
 entitySets:
 - type: "general.person"
   name: "DemoPatients"
@@ -463,7 +453,7 @@ entitySets:
   owners:
   - "auth0|59a985a557d70e1088c0c425"
   - "auth0|588a2038aa03fb78b0e52307"
-- type: "general.person"
+- type: "general.Provider"
   name: "DemoProviders"
   title: "Demo Providers"
   description: "Demo Providers"
@@ -517,5 +507,12 @@ entitySets:
   owners:
   - "auth0|59a985a557d70e1088c0c425"
   - "auth0|588a2038aa03fb78b0e52307"
-
-
+- type: "general.AssessedBy"
+  name: "AssessedBy"
+  title: "Assessed By"
+  description: "Assessed By"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+  - "auth0|588a2038aa03fb78b0e52307"
