Johnson county dispatch updates

--- a/JCDispatch/src/main/resources/log4j2.properties
+++ b/JCDispatch/src/main/resources/log4j2.properties
@@ -1,7 +1,7 @@
 status = debug
-name = ShuttleConfig
+name = JCDispatchConfig
 
-property.serviceName = datastore
+property.serviceName = JCDispatch
 property.rootDir = ./
 property.runningDir = ${rootDir}
 property.rollingDir = ${rootDir}/logging/
